# Couenne

./: .gitattributes  .gitignore  .travis.yml  Dependencies  Externals  INSTALL  Makefile.am  Makefile.in  README  README.md  acinclude.m4  appveyor.yml  configure  configure.ac  couenne.pc.in  getExternals.sh
Couenne/: Dependencies  Makefile.am  Makefile.in  README  acinclude.m4  configure  configure.ac  couenne-uninstalled.pc.in  couenne.pc.in
Couenne/doc/: mainpage.dox
Couenne/doxydoc/: doxygen.conf.in
Couenne/inc/: config_couenne.h.in
Couenne/src/: CouenneConfig.h  Makefile.am  Makefile.in  config.h.in  config_couenne_default.h  config_default.h  couenne.opt
Couenne/src/bound_tightening/: BTPerfIndicator.cpp  BTPerfIndicatorConstr.cpp  CouenneAggrProbing.cpp  CouenneAggrProbing.hpp  CouenneBTPerfIndicator.hpp  CouenneFixPoint.hpp  CouenneInfeasCut.cpp  CouenneInfeasCut.hpp  CouenneMultiVarProbe.hpp  CouenneSparseBndVec.hpp  FixPointConstructors.cpp  FixPointGenCuts.cpp  Makefile.am  Makefile.in  aggressiveBT.cpp  boundTightening.cpp  fake_tightening.cpp  impliedBounds.cpp  obbt.cpp  obbt_iter.cpp  obbt_supplement.cpp  tightenBounds.cpp
Couenne/src/branch/: BranchCore.cpp  CouenneBranchingObject.cpp  CouenneBranchingObject.hpp  CouenneChooseStrong.cpp  CouenneChooseStrong.hpp  CouenneChooseVariable.cpp  CouenneChooseVariable.hpp  CouenneComplBranchingObject.cpp  CouenneComplBranchingObject.hpp  CouenneComplObject.cpp  CouenneComplObject.hpp  Makefile.am  (+24 more)
Couenne/test/: Makefile.am  Makefile.in  grandTest.sh.in
src/: CouenneConfig.h  Makefile.am  Makefile.in  config.h.in  config_couenne.h.in  config_couenne_default.h  config_default.h
src/bound_tightening/: BTPerfIndicator.cpp  BTPerfIndicatorConstr.cpp  CouenneAggrProbing.cpp  CouenneAggrProbing.hpp  CouenneBTPerfIndicator.hpp  CouenneFixPoint.hpp  CouenneInfeasCut.cpp  CouenneInfeasCut.hpp  CouenneMultiVarProbe.hpp  CouenneSparseBndVec.hpp  FixPointConstructors.cpp  FixPointGenCuts.cpp  Makefile.am  Makefile.in  aggressiveBT.cpp  boundTightening.cpp  fake_tightening.cpp  impliedBounds.cpp  obbt.cpp  obbt_iter.cpp  obbt_supplement.cpp  tightenBounds.cpp
src/branch/: BranchCore.cpp  CouenneBranchingObject.cpp  CouenneBranchingObject.hpp  CouenneChooseStrong.cpp  CouenneChooseStrong.hpp  CouenneChooseVariable.cpp  CouenneChooseVariable.hpp  CouenneComplBranchingObject.cpp  CouenneComplBranchingObject.hpp  CouenneComplObject.cpp  CouenneComplObject.hpp  CouenneNauty.cpp  CouenneNauty.hpp  CouenneObject.cpp  CouenneObject.hpp  CouenneOrbitBranchingObj.cpp  CouenneOrbitBranchingObj.hpp  CouenneOrbitObj.cpp  CouenneOrbitObj.hpp  CouenneProjections.hpp  CouenneSOSObject.cpp  CouenneSOSObject.hpp  CouenneThreeWayBranchObj.cpp  CouenneThreeWayBranchObj.hpp  CouenneVTObject.hpp  CouenneVarObject.cpp  CouenneVarObject.hpp  Makefile.am  Makefile.in  StrongBranchingSetupList.cpp  doStrongBranching.cpp  feasibleRegion.cpp  infeasibility.cpp  infeasibilityVT.cpp  projections.cpp
src/convex/: CouenneCutGenerator.cpp  CouenneCutGenerator.hpp  Makefile.am  Makefile.in  addEnvelope.cpp  createCuts.cpp  genColCuts.cpp  genRowCuts.cpp  generateCuts.cpp  isOptimumCut.cpp  updateBranchInfo.cpp
src/disjunctive/: CouenneDisjCuts.cpp  CouenneDisjCuts.hpp  Makefile.am  Makefile.in  OsiCuts2MatrVec.cpp  OsiLinear2MatrVec.cpp  disjCut.cpp  dummyVecMatr.cpp  generateDisjCuts.cpp  getDisjunctions.cpp  separateWithDisjunction.cpp  singleDisjunctions.cpp
src/expression/: CouExpr.cpp  CouExpr.hpp  CouenneDomain.hpp  CouenneExprAux.hpp  CouenneExprBound.hpp  CouenneExprClone.hpp  CouenneExprConst.hpp  CouenneExprCopy.hpp  CouenneExprIVar.hpp  CouenneExprOp.hpp  CouenneExprStore.hpp  CouenneExprUnary.hpp  CouenneExprVar.hpp  CouenneExpression.hpp  CouennePrecisions.hpp  CouenneTypes.hpp  Makefile.am  Makefile.in  domain.cpp  exprAux.cpp  exprOp.cpp  exprUnary.cpp  exprVar.cpp  expression.cpp
src/heuristics/: BonInitHeuristic.cpp  BonInitHeuristic.hpp  BonNlpHeuristic.cpp  BonNlpHeuristic.hpp  CouenneFPFindSolution.cpp  CouenneFPSolveMILP.cpp  CouenneFPSolveNLP.cpp  CouenneFPcreateMILP.cpp  CouenneFPphaseMILP.cpp  CouenneFPphaseNLP.cpp  CouenneFPpool.cpp  CouenneFPpool.hpp  CouenneFPscipSolve.cpp  CouenneFeasPump.cpp  CouenneFeasPump.hpp  CouenneFeasPumpConstructors.cpp  CouenneIterativeRounding.cpp  CouenneIterativeRounding.hpp  Makefile.am  Makefile.in  cons_rowcuts.cpp  cons_rowcuts.h
src/interfaces/: BonCouenneInterface.cpp  BonCouenneInterface.hpp  CouenneMINLPInterface.cpp  CouenneMINLPInterface.hpp  CouenneTNLP.cpp  CouenneTNLP.hpp  CouenneUserInterface.hpp  Makefile.am  Makefile.in
src/main/: BonCouenne.cpp  BonCouenneInfo.cpp  BonCouenneInfo.hpp  BonCouenneSetup.cpp  BonCouenneSetup.hpp  CouTight.cpp  Couenne.cpp  CouenneBab.cpp  CouenneBab.hpp  CouenneOSInterface.cpp  CouenneOSInterface.hpp  CouenneSolver.cpp  Makefile.am  Makefile.in  SmartAslDestr.cpp
src/problem/: CouenneGlobalCutOff.cpp  CouenneGlobalCutOff.hpp  CouenneJournalist.hpp  CouenneLPtightenBounds.cpp  CouenneLPtightenBoundsCLP-light.cpp  CouenneLPtightenBoundsCLP.cpp  CouenneProblem.cpp  CouenneProblem.hpp  CouenneProblemConstructors.cpp  CouenneProblemElem.hpp  CouenneRecordBestSol.cpp  CouenneRecordBestSol.hpp  CouenneRestoreUnused.cpp  CouenneSOS.cpp  CouenneSolverInterface.cpp  CouenneSolverInterface.hpp  CouenneSymmetry.cpp  Makefile.am  Makefile.in  checkNLP.cpp  constraint.cpp  fillDependence.cpp  fillQuadIndices.cpp  getIntegerCandidate.cpp  problem.cpp  problemIO.cpp  reformulate.cpp  testIntFix.cpp  writeAMPL.cpp  writeGAMS.cpp  writeLP.cpp
src/readnl/: CouenneAmplInterface.cpp  CouenneAmplInterface.hpp  invmap.cpp  nl2e.cpp  readASLfg.cpp  readnl.cpp
src/standardize/: CouenneLQelems.hpp  Makefile.am  Makefile.in  analyzeSparsity.cpp  auxiliarize.cpp  constrStandardize.cpp  decomposeTerm.cpp  elementBreak.cpp  flattenMul.cpp  linStandardize.cpp  splitAux.cpp  standardize.cpp  sumStandardize.cpp
src/util/: CouenneFunTriplets.hpp  CouenneRootQ.hpp  CouenneSparseMatrix.cpp  CouenneSparseMatrix.hpp  Makefile.am  Makefile.in  drawCuts.cpp  rootQ.cpp
(+752 files in other folders)
